--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,8 @@
     ],
     "no-use-before-define": ["error", { "functions": false, "classes": true }],
     "prettier/prettier": "error",
-    "max-len": ["error", 80]
+    "max-len": ["error", 80],
+    "react/prop-types": 0
   },
   "env": {
     "browser": true
