--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src -c .eslintrc.json --ext js"
+    "lint": "eslint src -c .eslintrc.json --ext js",
+    "deploy:staging": "yarn build && surge build/ --domain barcode-reactor.surge.sh"
   },
   "eslintConfig": {
     "extends": "react-app"
