--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,3 @@
 {
-  "extends": ["airbnb", "prettier", "prettier/react"],
-  "plugins": ["react", "prettier"],
-  "rules": {
-    "react/jsx-filename-extension": [
-      1,
-      {
-        "extensions": [".js"]
-      }
-    ],
-    "no-use-before-define": ["error", { "functions": false, "classes": true }],
-    "prettier/prettier": "error",
-    "max-len": ["error", 80],
-    "react/prop-types": 0
-  },
-  "env": {
-    "browser": true
-  },
-  "parser": "babel-eslint"
+  "extends": "react-app"
 }
